Fix CV download link path

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
           <a href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
-        <a href="#" class="btn">Download CV</a>
+        <a href="./Henok_Demissie_CV.pdf" class="btn" download="Henok_Demissie_CV.pdf">Download CV</a>
     </div>
     <div class="home-img">
         <img src="images/photo_2023-08-19_12-18-58.jpg" alt="Henok Demissie - Profile Image"></div>
